cmake_minimum_required(VERSION 3.10.0)
project(Agenda)
file(GLOB_RECURSE src ./src/*.cpp)
file(GLOB_RECURSE include ./include/*.h)
set(CMAKE_CXX_FLAGS "-std=c++14")
add_executable(agenda ${src} ${include} main.cpp)
include_directories("${CMAKE_SOURCE_DIR}/include")
# find_package(PkgConfig REQUIRED)
# pkg_check_modules(GTKMM gtkmm-3.0)
# pkg_check_modules(GTK3 gtk+-3.0)
# pkg_check_modules(LIBGLADEMM libglademm-2.4)
# include_directories("${GTKMM_INCLUDE_DIRS}")
# include_directories("${GTK3_INCLUDE_DIRS}")
# include_directories("${LIBGLADEMM_INCLUDE_DIRS}")
# link_directories("${GTKMM_LIBRARY_DIRS}")
# link_directories("${GTK3_LIBRARY_DIRS}")
# link_directories("${LIBGLADEMM_LIBRARY_DIRS}")
# add_definitions("${GTKMM_CFLAGS_OTHER}")
# add_definitions("${GTK3_CFLAGS_OTHER}")
# add_definitions("${LIBGLADEMM_CFLAGS_OTHER}")
set(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin")
# target_link_libraries(agenda "${GTKMM_LIBRARIES}")
# target_link_libraries(agenda "${GTK3_LIBRARIES}")
# target_link_libraries(agenda "${LIBGLADEMM_LIBRARIES}")
